# fmri-repro-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVLOG.md  NOTICE  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ORIGINS.md  ground-truth-protocol.md
docs/adr/: max-retries-value-fields-free-string.md
docs/findings/: adjudication-order-generalization.md  chen-temporal-flip.md  citation-index-backlog.md  pdf-glue-false-missing.md  span-resolution-fix.md  span-resolution-hard-drop.md  stage-partition.md  subject-validator.md  temporal-firewall-fix.md  value-support-guard-substring-hole.md  variance.md
docs/spec/: acquisition_catalog_v0.1.0.md  preprocessing_catalog_v0.1.0.md
examples/: hcp_glasser_fieldmaps.json  spec.json
examples/frozen/: README.md  preprocessing-v0.1.0.json
extractor_mvp/: .gitignore  README.md  generate_sfn_review.py  pyproject.toml  score_base_pipeline_tier_a.py
extractor_mvp/examples/: README.md  batch_config.example.yaml  cho_2021_hcp_section.txt  schwartz_2018_methods.txt
extractor_mvp/scripts/: chen_fix_ab.py  chen_flip_probe.py  hard_drop_audit.py  recall_probe.py  retry_audit.py  stage_partition.py  variance_probe.py
extractor_mvp/src/extractor_mvp/: __init__.py  acquisition_discovery.py  base_pipeline_match.py  batch.py  batch_config.py  batch_utils.py  citation_resolver.py  cobidas.py  command_survey.py  corpus.py  demo.py  doi_date_resolver.py  extraction_result.py  extractor.py  field_diff.py  methods_finder.py  multi_acquisition_batch.py  multi_acquisition_extractor.py  paper_fetcher.py  parsed_paper.py  pdf_loader.py  render.py  span_resolver.py  subject_validator.py  synonym_resolver.py
extractor_mvp/tests/: conftest.py  test_acquisition_discovery.py  test_assemble_v0_3_0.py  test_base_pipeline_extraction.py  test_base_pipeline_match.py  test_batch.py  test_citation_resolver.py  test_cobidas.py  test_command_survey.py  test_corpus.py  test_doi_date_resolver.py  test_extract_routing.py  test_extractor.py  test_field_diff.py  test_methods_finder.py  test_multi_acquisition_extractor.py  test_paper_fetcher.py  test_pdf_loader.py  test_per_acquisition_prompt.py  test_recall_probe.py  test_render.py  test_span_resolver.py  test_span_resolver_tolerant.py  test_subject_validator.py  test_synonym_resolver.py  test_temporal_standardization_routing.py
ground_truth/: README.md  base_pipeline_labels_v1.1-snapshot.xlsx  base_pipeline_labels_v1.csv  base_pipeline_labels_v1.xlsx  derive_labels_csv.py  predictions_v040_frozen.csv  tier_b_aliases.csv
schema/: replication_spec-0.1.0.schema.json  study_spec-0.1.0.schema.json  study_spec-0.2.0.schema.json  study_spec-0.3.0.schema.json  study_spec-0.4.0.schema.json
scripts/: export_schema.py  make_example_spec.py  make_glasser_fieldmap_example.py
src/fmri_repro/kb_client/: __init__.py  base_pipeline.py
src/fmri_repro/spec/: core.py  migrations.py  preprocessing.py  (+6 more)
tests/: test_smoke.py
tests/kb_client/: test_base_pipeline.py  test_ccs_base_pipeline.py  test_conditional_defaults.py  test_vocab_contract.py
tests/spec/: test_acquisition.py  test_examples_reproducible.py  test_fieldmap_fixture.py  test_intensity_normalization_value.py  test_intensity_zscore.py  test_migrations.py  test_preprocessing.py  test_provenance.py  test_replication_spec.py  test_study_spec.py  test_temporal_standardization.py
